# xonix

./: CMakeLists.txt  README.md  build.sh  game.cpp  game.h  main.cpp
